# ustc-get-grade

./: Cargo.toml  README.md  config_example.toml
src/: lib.rs  main.rs
